# yosaweb

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: prod.yml
src/: lib.rs  main.rs
src/htmx/: character.rs  contact.rs  footer.rs  guideline.rs  header.rs  mod.rs  navbar.rs  store.rs
templates/: character.html  footer.html  guideline.html  header.html  index.html  store.html
