[package]
name = "official"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-htmx = "0.5.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }